removing errir from Google.java

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+notifications:
+  slack: top-testing:KqElk9A01LpRWMHMyH9cMdOE
 language: java
 sudo: false
-script: mvn clean verify
+script: mvn clean test
